src/common/simclist.h

typedef ULONG32 uint32_t;
typedef LONG32  int32_t;
/**
 * Type representing list hashes.
 *
 * This is a signed integer value.
 */
typedef int32_t list_hash_t;
/**
 * a comparator of elements.
 *
 * A comparator of elements is a function that:
 *      -# receives two references to elements a and b
 *      -# returns {<0, 0, >0} if (a > b), (a == b), (a < b) respectively
 *
 * It is responsibility of the function to handle possible NULL values.
 */
typedef int (*element_comparator)(const void *a, const void *b);
/**
 * a seeker of elements.
 *
 * An element seeker is a function that:
 *      -# receives a reference to an element el
 *      -# receives a reference to some indicator data
 *      -# returns non-0 if the element matches the indicator, 0 otherwise
 *
 * It is responsibility of the function to handle possible NULL values in any
 * argument.
 */
typedef int (*element_seeker)(const void *el, const void *indicator);
/**
 * an element length meter.
 *
 * An element meter is a function that:
 *      -# receives the reference to an element el
 *      -# returns its size in bytes
 *
 * It is responsibility of the function to handle possible NULL values.
 */
typedef size_t (*element_meter)(const void *el);
/**
 * a function computing the hash of elements.
 *
 * An hash computing function is a function that:
 *      -# receives the reference to an element el
 *      -# returns a hash value for el
 *
 * It is responsibility of the function to handle possible NULL values.
 */
typedef list_hash_t (*element_hash_computer)(const void *el);
/**
 * a function for serializing an element.
 *
 * A serializer function is one that gets a reference to an element,
 * and returns a reference to a buffer that contains its serialization
 * along with the length of this buffer.
 * It is responsibility of the function to handle possible NULL values,
 * returning a NULL buffer and a 0 buffer length.
 *
 * These functions have 3 goals:
 *  -# "freeze" and "flatten" the memory representation of the element
 *  -# provide a portable (wrt byte order, or type size) representation of the element, if the dump can be used on different sw/hw combinations
 *  -# possibly extract a compressed representation of the element
 *
 * @param el                reference to the element data
 * @param serialize_buffer  reference to fill with the length of the buffer
 * @return                  reference to the buffer with the serialized data
 */
typedef void *(*element_serializer)(const void *simclist_restrict el, uint32_t *simclist_restrict serialize_buffer);
/**
 * a function for un-serializing an element.
 *
 * An unserializer function accomplishes the inverse operation of the
 * serializer function.  An unserializer function is one that gets a
 * serialized representation of an element and turns it backe to the original
 * element. The serialized representation is passed as a reference to a buffer
 * with its data, and the function allocates and returns the buffer containing
 * the original element, and it sets the length of this buffer into the
 * integer passed by reference.
 *
 * @param data              reference to the buffer with the serialized representation of the element
 * @param data_len          reference to the location where to store the length of the data in the buffer returned
 * @return                  reference to a buffer with the original, unserialized representation of the element
 */
typedef void *(*element_unserializer)(const void *simclist_restrict data, uint32_t *simclist_restrict data_len);
/* [private-use] list entry -- olds actual user datum */
struct list_entry_s {
    void *data;

    /* doubly-linked list service references */
    struct list_entry_s *next;
    struct list_entry_s *prev;
};
/* [private-use] list attributes */
struct list_attributes_s {
    /* user-set routine for comparing list elements */
    element_comparator comparator;
    /* user-set routing for seeking elements */
    element_seeker seeker;
    /* user-set routine for determining the length of an element */
    element_meter meter;
    int copy_data;
    /* user-set routine for computing the hash of an element */
    element_hash_computer hasher;
    /* user-set routine for serializing an element */
    element_serializer serializer;
    /* user-set routine for unserializing an element */
    element_unserializer unserializer;
};
/** list object */
typedef struct {
    struct list_entry_s *head_sentinel;
    struct list_entry_s *tail_sentinel;
    struct list_entry_s *mid;

    unsigned int numels;

    /* array of spare elements */
    struct list_entry_s **spareels;
    unsigned int spareelsnum;

#ifdef SIMCLIST_WITH_THREADS
    /* how many threads are currently running */
    unsigned int threadcount;
#endif

    /* service variables for list iteration */
    int iter_active;
    unsigned int iter_pos;
    struct list_entry_s *iter_curentry;

    /* list attributes */
    struct list_attributes_s attrs;
} list_t;